[package]
name = "image_enrichment"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"
jsonschema = "0.33"
tokio = { version = "1", features = ["full"] }
futures = "0.3"